[gd_scene load_steps=5 format=3 uid="uid://08fj6wqbn6nv"]

[ext_resource type="Script" uid="uid://cgoo6i5r3u44w" path="res://main.gd" id="1_vsveo"]
[ext_resource type="Texture2D" uid="uid://dg0jg2rqgq2py" path="res://Grafiki/Korybut-Wiśniowiecki-299922839-removebg-preview.png" id="2_0xm2m"]
[ext_resource type="Theme" uid="uid://bsg8uqpbqn2na" path="res://Grafiki/button.tres" id="2_h2yge"]

[sub_resource type="LabelSettings" id="LabelSettings_72kdu"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vsveo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.454524, 0.454524, 0.454524, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 29

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "XVII wieczny 
przybornik "
label_settings = SubResource("LabelSettings_72kdu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
texture_repeat = 1
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_h2yge")
theme_override_constants/outline_size = 10
text = "Kalkulator"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_h2yge")
theme_override_constants/outline_size = 10
text = "Analfabeta mode"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_h2yge")
theme_override_constants/outline_size = 10
text = "Kalendarz Upraw"

[node name="Button6" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_h2yge")
theme_override_constants/outline_size = 10
text = "Szukasz żony?"

[node name="Button7" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_h2yge")
theme_override_constants/outline_size = 10
text = "Mapa"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Korybut-wiśniowiecki-299922839-removebg-preview" type="Sprite2D" parent="."]
position = Vector2(29, 466)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_0xm2m")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 92.0
offset_right = 288.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "imienia najlepszego króla 
Michała korybuta wiśniowieckiego"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="VBoxContainer/Button7" to="." method="_on_button_7_pressed"]
